--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,25 +8,35 @@
     <link rel="stylesheet" href="style.css">
     <title>4GI</title>
 </head>
-<body>
-        <nav>
-            <a href="index.html"><li>HOME</li></a>
-            <a href="alunni.html"><li>ALUNNI</li></a>
-            <a href="professori.html"><li>PROFESSORI</li></a>
-            <a href="orario.html"><li>ORARIO</li></a>
-        </nav>
 
-        <main>
-            <div class="content">
-                <header>
-                    <h1>QUESTA È LA 4<sup>a</sup>GI</h1>
-                </header>
-                <div class="text">
-                </div>
+<body>
+    <nav>
+        <a href="index.html">
+            <li>HOME</li>
+        </a>
+        <a href="alunni.html">
+            <li>ALUNNI</li>
+        </a>
+        <a href="professori.html">
+            <li>PROFESSORI</li>
+        </a>
+        <a href="orario.html">
+            <li>ORARIO</li>
+        </a>
+    </nav>
+
+    <main>
+        <div class="content">
+            <header>
+                <h1>QUESTA È LA 4<sup>a</sup>GI</h1>
+            </header>
+            <div class="text">
             </div>
-        </main>
-        <footer>
-        
-        </footer>
+        </div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
