--- a/orario.html
+++ b/orario.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,17 +8,27 @@
     <link rel="stylesheet" href="style.css">
     <title>Orario</title>
 </head>
+
 <body>
     <style>
-        td, th{
+        td,
+        th {
             padding: 20px 45px;
         }
     </style>
     <nav>
-        <a href="index.html"><li>HOME</li></a>
-        <a href="alunni.html"><li>ALUNNI</li></a>
-        <a href="professori.html"><li>PROFESSORI</li></a>
-        <a href="orario.html"><li>ORARIO</li></a>
+        <a href="index.html">
+            <li>HOME</li>
+        </a>
+        <a href="alunni.html">
+            <li>ALUNNI</li>
+        </a>
+        <a href="professori.html">
+            <li>PROFESSORI</li>
+        </a>
+        <a href="orario.html">
+            <li>ORARIO</li>
+        </a>
     </nav>
 
     <main>
@@ -88,7 +99,8 @@
         </div>
     </main>
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
