--- a/professori.html
+++ b/professori.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,12 +9,21 @@
     <link rel="stylesheet" href="style2.css">
     <title>Professori</title>
 </head>
+
 <body>
     <nav>
-        <a href="index.html"><li>HOME</li></a>
-        <a href="alunni.html"><li>ALUNNI</li></a>
-        <a href="professori.html"><li>PROFESSORI</li></a>
-        <a href="orario.html"><li>ORARIO</li></a>
+        <a href="index.html">
+            <li>HOME</li>
+        </a>
+        <a href="alunni.html">
+            <li>ALUNNI</li>
+        </a>
+        <a href="professori.html">
+            <li>PROFESSORI</li>
+        </a>
+        <a href="orario.html">
+            <li>ORARIO</li>
+        </a>
     </nav>
 
     <main>
@@ -53,7 +63,7 @@
                         <td>Sistemi e reti</td>
                         <td>3</td>
                     </tr>
-                        <tr>
+                    <tr>
                         <td>Sara</td>
                         <td>Colombo</td>
                         <td>Inglese</td>
@@ -91,4 +101,5 @@
 
     </footer>
 </body>
+
 </html>
