--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>4GI</title>
 </head>
 
@@ -14,13 +14,13 @@
         <a href="index.html">
             <li>HOME</li>
         </a>
-        <a href="alunni.html">
+        <a href="./pages/alunni.html">
             <li>ALUNNI</li>
         </a>
-        <a href="professori.html">
+        <a href="./pages/professori.html">
             <li>PROFESSORI</li>
         </a>
-        <a href="orario.html">
+        <a href="/pages/orario.html">
             <li>ORARIO</li>
         </a>
     </nav>
@@ -30,8 +30,7 @@
             <header>
                 <h1>QUESTA È LA 4<sup>a</sup>GI</h1>
             </header>
-            <div class="text">
-            </div>
+            <img src="./img/scuola.jpg" alt="">
         </div>
     </main>
     <footer>
