--- a/pages/alunni.html
+++ b/pages/alunni.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Alunni</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <title>4GI - Alunni</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         }
     </style>
     <nav>
-        <a href="index.html">
+        <a href="../index.html">
             <li>HOME</li>
         </a>
         <a href="alunni.html">
