--- a/pages/orario.html
+++ b/pages/orario.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Orario</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/styleOraro.css">
+    <title>4GI - Orario</title>
 </head>
 
 <body>
@@ -17,7 +18,7 @@
         }
     </style>
     <nav>
-        <a href="index.html">
+        <a href="../index.html">
             <li>HOME</li>
         </a>
         <a href="alunni.html">
@@ -49,17 +50,15 @@
                     <tr>
                         <th>08:00-09:00</th>
                         <td>Sistemi e Reti</td>
-                        <td>Scienze Motorie</td>
+                        <td rowspan="2">Scienze Motorie</td>
                         <td>Informatica</td>
-                        <td>Lab. Teconologie e Progettazione</td>
+                        <td rowspan="2">Lab. Teconologie e Progettazione</td>
                         <td>Italiano e Storia</td>
                     </tr>
                     <tr>
                         <th>09:00-10:00</th>
                         <td>Matematica</td>
-                        <td>Scienze Motorie</td>
-                        <td>Informatica</td>
-                        <td>Lab. Teconologie e Progettazione</td>
+                        <td>Teconologie e Progettazione</td>
                         <td>Matematica</td>
                     </tr>
                     <tr>
@@ -68,23 +67,20 @@
                         <td>Sistemi e Reti</td>
                         <td>Telecomunicazioni</td>
                         <td>Inglese</td>
-                        <td>Teconologie e Progettazione</td>
+                        <td>Informatica</td>
                     </tr>
                     <tr>
                         <th>11:00-12:00</th>
+                        <td rowspan="2">Italiano e Storia</td>
+                        <td>Informatica</td>
+                        <td rowspan="2">Italiano e Storia</td>
                         <td>Italiano e Storia</td>
-                        <td>Italiano e Storia</td>
-                        <td>Italiano e Storia</td>
-                        <td>Italiano e Storia</td>
-                        <td>Lab Telecomunicazioni</td>
+                        <td rowspan="2">Lab Telecomunicazioni</td>
                     </tr>
                     <tr>
                         <th>12:00-13:00</th>
-                        <td>Italiano e Storia</td>
                         <td>Matematica</td>
-                        <td>Informatica</td>
                         <td>Lab Informatica</td>
-                        <td>Lab Telecomunicazioni</td>
                     </tr>
                     <tr>
                         <th>13:00-14:00</th>
