--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h1>ISIS FACCHINETTI</h1>
             </header>
             <div id="imageContainer">
-                <img src="./img/scuola.jpg" alt="Istituto Facchinetti">
+                <img src="./img/scuola.jpg" alt="Istituto Facchinetti" width="100%">
             </div>
         </div>
     </main>
