--- a/pages/professori.html
+++ b/pages/professori.html
@@ -33,70 +33,72 @@
             <header>
                 <h1>PROFESSORI</h1>
             </header>
-            <table>
-                <thead>
-                    <th>NOME</th>
-                    <th>COGNOME</th>
-                    <th>MATERIA</th>
-                    <th>ORE A SETTIMANA</th>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Luca</td>
-                        <td>Barracato</td>
-                        <td>Italiano<br>Storia</td>
-                        <td>6</td>
-                    </tr>
-                    <tr>
-                        <td>Claudia</td>
-                        <td>Ciarambino</td>
-                        <td>Informatica</td>
-                        <td>5</td>
-                    </tr>
-                    <tr>
-                        <td>Antonio</td>
-                        <td>Santoro</td>
-                        <td>Informatica Lab.</td>
-                        <td>2</td>
-                    </tr>
-                    <tr>
-                        <td>Giuseppe</td>
-                        <td>Trovato</td>
-                        <td>Sistemi e reti</td>
-                        <td>3</td>
-                    </tr>
-                    <tr>
-                        <td>Sara</td>
-                        <td>Colombo</td>
-                        <td>Inglese</td>
-                        <td>3</td>
-                    </tr>
-                    <tr>
-                        <td>Valentina</td>
-                        <td>Corà</td>
-                        <td>Religione</td>
-                        <td>1</td>
-                    </tr>
-                    <tr>
-                        <td>Mattia</td>
-                        <td>Di Costanzo</td>
-                        <td>Telecomunicazioni Lab.</td>
-                        <td>2</td>
-                    </tr>
-                    <tr>
-                        <td>Sara</td>
-                        <td>Di Francesco</td>
-                        <td>Scienze motorie e sportive</td>
-                        <td>2</td>
-                    </tr>
-                    <tr>
-                        <td>Mario</td>
-                        <td>La Vecchia</td>
-                        <td>Telecomunicazioni</td>
-                        <td>3</td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="wrapper">
+                <table>
+                    <thead>
+                        <th>NOME</th>
+                        <th>COGNOME</th>
+                        <th>MATERIA</th>
+                        <th>ORE A SETTIMANA</th>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Luca</td>
+                            <td>Barracato</td>
+                            <td>Italiano<br>Storia</td>
+                            <td>6</td>
+                        </tr>
+                        <tr>
+                            <td>Claudia</td>
+                            <td>Ciarambino</td>
+                            <td>Informatica</td>
+                            <td>5</td>
+                        </tr>
+                        <tr>
+                            <td>Antonio</td>
+                            <td>Santoro</td>
+                            <td>Informatica Lab.</td>
+                            <td>2</td>
+                        </tr>
+                        <tr>
+                            <td>Giuseppe</td>
+                            <td>Trovato</td>
+                            <td>Sistemi e reti</td>
+                            <td>3</td>
+                        </tr>
+                        <tr>
+                            <td>Sara</td>
+                            <td>Colombo</td>
+                            <td>Inglese</td>
+                            <td>3</td>
+                        </tr>
+                        <tr>
+                            <td>Valentina</td>
+                            <td>Corà</td>
+                            <td>Religione</td>
+                            <td>1</td>
+                        </tr>
+                        <tr>
+                            <td>Mattia</td>
+                            <td>Di Costanzo</td>
+                            <td>Telecomunicazioni Lab.</td>
+                            <td>2</td>
+                        </tr>
+                        <tr>
+                            <td>Sara</td>
+                            <td>Di Francesco</td>
+                            <td>Scienze motorie e sportive</td>
+                            <td>2</td>
+                        </tr>
+                        <tr>
+                            <td>Mario</td>
+                            <td>La Vecchia</td>
+                            <td>Telecomunicazioni</td>
+                            <td>3</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </main>
     <footer>
