--- a/pages/orario.html
+++ b/pages/orario.html
@@ -33,61 +33,63 @@
             <header>
                 <h1>ORARIO</h1>
             </header>
-            <table>
-                <thead>
-                    <th>ORARIO</th>
-                    <th>LUNEDÌ</th>
-                    <th>MARTEDÌ</th>
-                    <th>MERCOLEDÌ</th>
-                    <th>GIOVEDÌ</th>
-                    <th>VENERDÌ</th>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th>08:00-09:00</th>
-                        <td>Sistemi e Reti</td>
-                        <td rowspan="2">Scienze Motorie</td>
-                        <td>Informatica</td>
-                        <td rowspan="2">Lab. Teconologie e Progettazione</td>
-                        <td>Italiano e Storia</td>
-                    </tr>
-                    <tr>
-                        <th>09:00-10:00</th>
-                        <td>Matematica</td>
-                        <td>Teconologie e Progettazione</td>
-                        <td>Matematica</td>
-                    </tr>
-                    <tr>
-                        <th>10:00-11:00</th>
-                        <td>Religione</td>
-                        <td>Sistemi e Reti</td>
-                        <td>Telecomunicazioni</td>
-                        <td>Inglese</td>
-                        <td>Informatica</td>
-                    </tr>
-                    <tr>
-                        <th>11:00-12:00</th>
-                        <td rowspan="2">Italiano e Storia</td>
-                        <td>Informatica</td>
-                        <td rowspan="2">Italiano e Storia</td>
-                        <td>Italiano e Storia</td>
-                        <td rowspan="2">Lab Telecomunicazioni</td>
-                    </tr>
-                    <tr>
-                        <th>12:00-13:00</th>
-                        <td>Matematica</td>
-                        <td>Lab Informatica</td>
-                    </tr>
-                    <tr>
-                        <th>13:00-14:00</th>
-                        <td>Inglese</td>
-                        <td>Lab Informatica</td>
-                        <td>Lab Sistemi</td>
-                        <td>Matematica</td>
-                        <td>Inglese</td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="wrapper">
+                <table>
+                    <thead>
+                        <th>ORARIO</th>
+                        <th>LUNEDÌ</th>
+                        <th>MARTEDÌ</th>
+                        <th>MERCOLEDÌ</th>
+                        <th>GIOVEDÌ</th>
+                        <th>VENERDÌ</th>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th>08:00-09:00</th>
+                            <td>Sistemi e Reti</td>
+                            <td rowspan="2">Scienze Motorie</td>
+                            <td>Informatica</td>
+                            <td rowspan="2">Lab. Teconologie e Progettazione</td>
+                            <td>Italiano e Storia</td>
+                        </tr>
+                        <tr>
+                            <th>09:00-10:00</th>
+                            <td>Matematica</td>
+                            <td>Teconologie e Progettazione</td>
+                            <td>Matematica</td>
+                        </tr>
+                        <tr>
+                            <th>10:00-11:00</th>
+                            <td>Religione</td>
+                            <td>Sistemi e Reti</td>
+                            <td>Telecomunicazioni</td>
+                            <td>Inglese</td>
+                            <td>Informatica</td>
+                        </tr>
+                        <tr>
+                            <th>11:00-12:00</th>
+                            <td rowspan="2">Italiano e Storia</td>
+                            <td>Informatica</td>
+                            <td rowspan="2">Italiano e Storia</td>
+                            <td>Italiano e Storia</td>
+                            <td rowspan="2">Lab Telecomunicazioni</td>
+                        </tr>
+                        <tr>
+                            <th>12:00-13:00</th>
+                            <td>Matematica</td>
+                            <td>Lab Informatica</td>
+                        </tr>
+                        <tr>
+                            <th>13:00-14:00</th>
+                            <td>Inglese</td>
+                            <td>Lab Informatica</td>
+                            <td>Lab Sistemi</td>
+                            <td>Matematica</td>
+                            <td>Inglese</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </main>
     <footer>
