--- a/pages/alunni.html
+++ b/pages/alunni.html
@@ -152,19 +152,19 @@
         </div>
     </main>
     <footer>
-        <a href="https://www.instagram.com/isis.facchinetti/">
+        <a href="https://www.instagram.com/isis.facchinetti/" target="_blank">
             <i class="fa-brands fa-instagram"></i>
             <li>INSTAGRAM</li>
         </a>
-        <a href="http://www.facebook.com/pages/ISIS-C-Facchinetti-Pagina-Ufficiale/135828703154762">
+        <a href="http://www.facebook.com/pages/ISIS-C-Facchinetti-Pagina-Ufficiale/135828703154762" target="_blank">
             <i class="fa-brands fa-facebook"></i>
             <li>FACEBOOK</li>
         </a>
-        <a href="https://isisfacchinetti.edu.it">
+        <a href="https://isisfacchinetti.edu.it" target="_blank">
             <i class="fa-solid fa-school"></i>
             <li>ISIS FACCHINETTI</li>
         </a>
-        <a href="https://www.youtube.com/channel/UCqPj8YlBOW1GsJ94qbTipQQ">
+        <a href="https://www.youtube.com/channel/UCqPj8YlBOW1GsJ94qbTipQQ" target="_blank">
             <i class="fa-brands fa-youtube"></i>
             <li>YOUTUBE</li>
         </a>
