--- a/pages/orario.html
+++ b/pages/orario.html
@@ -49,7 +49,7 @@
                             <td>Sistemi e Reti</td>
                             <td rowspan="2">Scienze Motorie</td>
                             <td>Informatica</td>
-                            <td rowspan="2">Lab. Teconologie e Progettazione</td>
+                            <td rowspan="2">Laboratorio Teconologie e Progettazione</td>
                             <td>Italiano e Storia</td>
                         </tr>
                         <tr>
@@ -72,18 +72,18 @@
                             <td>Informatica</td>
                             <td rowspan="2">Italiano e Storia</td>
                             <td>Italiano e Storia</td>
-                            <td rowspan="2">Lab Telecomunicazioni</td>
+                            <td rowspan="2">Laboratorio Telecomunicazioni</td>
                         </tr>
                         <tr>
                             <th>12:00-13:00</th>
                             <td>Matematica</td>
-                            <td>Lab Informatica</td>
+                            <td>Laboratorio Informatica</td>
                         </tr>
                         <tr>
                             <th>13:00-14:00</th>
                             <td>Inglese</td>
-                            <td>Lab Informatica</td>
-                            <td>Lab Sistemi</td>
+                            <td>Laboratorio Informatica</td>
+                            <td>Laboratorio Sistemi</td>
                             <td>Matematica</td>
                             <td>Inglese</td>
                         </tr>
@@ -93,19 +93,19 @@
         </div>
     </main>
     <footer>
-        <a href="https://www.instagram.com/isis.facchinetti/">
+        <a href="https://www.instagram.com/isis.facchinetti/" target="_blank">
             <i class="fa-brands fa-instagram"></i>
             <li>INSTAGRAM</li>
         </a>
-        <a href="http://www.facebook.com/pages/ISIS-C-Facchinetti-Pagina-Ufficiale/135828703154762">
+        <a href="http://www.facebook.com/pages/ISIS-C-Facchinetti-Pagina-Ufficiale/135828703154762" target="_blank">
             <i class="fa-brands fa-facebook"></i>
             <li>FACEBOOK</li>
         </a>
-        <a href="https://isisfacchinetti.edu.it">
+        <a href="https://isisfacchinetti.edu.it" target="_blank">
             <i class="fa-solid fa-school"></i>
             <li>ISIS FACCHINETTI</li>
         </a>
-        <a href="https://www.youtube.com/channel/UCqPj8YlBOW1GsJ94qbTipQQ">
+        <a href="https://www.youtube.com/channel/UCqPj8YlBOW1GsJ94qbTipQQ" target="_blank">
             <i class="fa-brands fa-youtube"></i>
             <li>YOUTUBE</li>
         </a>
