--- a/pages/orario.html
+++ b/pages/orario.html
@@ -29,6 +29,9 @@
         <a href="orario.html">
             <li>ORARIO</li>
         </a>
+        <a href="./pages/libri.html">
+            <li>LIBRI</li>
+        </a>
     </nav>
 
     <main>
