--- a/pages/professori.html
+++ b/pages/professori.html
@@ -29,6 +29,10 @@
         <a href="orario.html">
             <li>ORARIO</li>
         </a>
+        <a href="./pages/libri.html">
+            <li>LIBRI</li>
+        </a>
+        <a href=""></a>
     </nav>
 
     <main>
@@ -82,8 +86,8 @@
                             <td>1</td>
                         </tr>
                         <tr>
-                            <td>Mattia</td>
-                            <td>Di Costanzo</td>
+                            <td>Giulio</td>
+                            <td>Scordo</td>
                             <td>Telecomunicazioni Lab.</td>
                             <td>2</td>
                         </tr>
