--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
       <a href="/pages/orario.html">
         <li>ORARIO</li>
       </a>
+      <a href="./pages/libri.html">
+        <li>LIBRI</li>
+      </a>
     </nav>
 
     <main>
