--- a/index.html
+++ b/index.html
@@ -14,54 +14,56 @@
   </head>
 
   <body>
-    <nav>
-      <a href="index.html">
-        <li>HOME</li>
-      </a>
-      <a href="./pages/alunni.html">
-        <li>ALUNNI</li>
-      </a>
-      <a href="./pages/professori.html">
-        <li>PROFESSORI</li>
-      </a>
-      <a href="/pages/orario.html">
-        <li>ORARIO</li>
-      </a>
-      <a href="./pages/libri.html">
-        <li>LIBRI</li>
-      </a>
-    </nav>
-
-    <main>
-      <div class="content">
-        <header>
-          <h1>ISIS FACCHINETTI</h1>
-        </header>
-        <div id="imageContainer">
-          <img src="./img/scuola.jpg" alt="Istituto Facchinetti" width="100%" />
+    <div class="element">
+      <nav>
+        <a href="index.html">
+          <li>HOME</li>
+        </a>
+        <a href="./pages/alunni.html">
+          <li>ALUNNI</li>
+        </a>
+        <a href="./pages/professori.html">
+          <li>PROFESSORI</li>
+        </a>
+        <a href="/pages/orario.html">
+          <li>ORARIO</li>
+        </a>
+        <a href="./pages/libri.html">
+          <li>LIBRI</li>
+        </a>
+      </nav>
+  
+      <main>
+        <div class="content">
+          <header>
+            <h1>ISIS FACCHINETTI</h1>
+          </header>
+          <div id="imageContainer">
+            <img src="./img/scuola.jpg" alt="Istituto Facchinetti" width="100%" />
+          </div>
+          <div class="text">
+            <p>
+              Milanese di orgine, nacque il 13 gennaio 1889 a Campobasso e si
+              trasferì ben presto a Busto Arsizio dove iniziò giovanissimo il suo
+              impegno giornalistico e politico di ispirazione cattanea.
+              All’entrata dell’Italia nel primo conflitto mondiale si arruolò
+              volontario; il 23 marzo 1917, sul fronte del Carso nei pressi di
+              Monfalcone, fu gravemente ferito da schegge di granata. Ciò gli
+              causò l’asportazione dell’occhio sinistro ed una lesione grave a
+              quello destro. Dopo la guerra fondò con Bissolati L’Italia del
+              Popolo. Nelle elezioni del 6 aprile 1924 fu eletto per la prima
+              volta deputato nel collegio di Trieste, fu uno dei convinti
+              sostenitori della secessione dell’Aventino e il regime lo dichiarò
+              decaduto nel novembre 1926. Arrestato e poi rilasciato per ordine
+              del Ministero dell’Interno, espatriò in Svizzera e in Francia.
+              Rieletto deputato, fu designato Ministro della Difesa nel secondo
+              governo De Gasperi e nel quarto, fino al maggio 1948 allorchè venne
+              sostituito da Pacciardi.
+            </p>
+          </div>
         </div>
-        <div class="text">
-          <p>
-            Milanese di orgine, nacque il 13 gennaio 1889 a Campobasso e si
-            trasferì ben presto a Busto Arsizio dove iniziò giovanissimo il suo
-            impegno giornalistico e politico di ispirazione cattanea.
-            All’entrata dell’Italia nel primo conflitto mondiale si arruolò
-            volontario; il 23 marzo 1917, sul fronte del Carso nei pressi di
-            Monfalcone, fu gravemente ferito da schegge di granata. Ciò gli
-            causò l’asportazione dell’occhio sinistro ed una lesione grave a
-            quello destro. Dopo la guerra fondò con Bissolati L’Italia del
-            Popolo. Nelle elezioni del 6 aprile 1924 fu eletto per la prima
-            volta deputato nel collegio di Trieste, fu uno dei convinti
-            sostenitori della secessione dell’Aventino e il regime lo dichiarò
-            decaduto nel novembre 1926. Arrestato e poi rilasciato per ordine
-            del Ministero dell’Interno, espatriò in Svizzera e in Francia.
-            Rieletto deputato, fu designato Ministro della Difesa nel secondo
-            governo De Gasperi e nel quarto, fino al maggio 1948 allorchè venne
-            sostituito da Pacciardi.
-          </p>
-        </div>
-      </div>
-    </main>
+      </main>
+    </div>
     <footer>
       <a href="https://www.instagram.com/isis.facchinetti/" target="_blank">
         <i class="fa-brands fa-instagram"></i>
