--- a/pages/orario.html
+++ b/pages/orario.html
@@ -10,94 +10,103 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/styleOraro.css">
     <script src="https://kit.fontawesome.com/332c6e2590.js" crossorigin="anonymous"></script>
     <title>4GI - Orario</title>
 </head>
 
 <body>
-    <nav>
-        <a href="../index.html">
-            <li>HOME</li>
-        </a>
-        <a href="alunni.html">
-            <li>ALUNNI</li>
-        </a>
-        <a href="professori.html">
-            <li>PROFESSORI</li>
-        </a>
-        <a href="orario.html">
-            <li>ORARIO</li>
-        </a>
-        <a href="./pages/libri.html">
-            <li>LIBRI</li>
-        </a>
-    </nav>
+    <div class="element">
+        <nav>
+            <a href="../index.html">
+                <li>HOME</li>
+            </a>
+            <a href="/pages/alunni.html">
+                <li>ALUNNI</li>
+            </a>
+            <a href="/pages/professori.html">
+                <li>PROFESSORI</li>
+            </a>
+            <a href="/pages/orario.html">
+                <li>ORARIO</li>
+            </a>
+            <a href="/pages/libri.html">
+                <li>LIBRI</li>
+            </a>
+        </nav>
 
-    <main>
-        <div class="content">
-            <header>
-                <h1>ORARIO</h1>
-            </header>
-            <div class="wrapper">
-                <table>
-                    <thead>
-                        <th>ORARIO</th>
-                        <th>LUNEDÌ</th>
-                        <th>MARTEDÌ</th>
-                        <th>MERCOLEDÌ</th>
-                        <th>GIOVEDÌ</th>
-                        <th>VENERDÌ</th>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th>08:00-09:00</th>
-                            <td>Sistemi e Reti</td>
-                            <td rowspan="2">Scienze Motorie</td>
-                            <td>Informatica</td>
-                            <td rowspan="2">Laboratorio Teconologie e Progettazione</td>
-                            <td>Italiano e Storia</td>
-                        </tr>
-                        <tr>
-                            <th>09:00-10:00</th>
-                            <td>Matematica</td>
-                            <td>Teconologie e Progettazione</td>
-                            <td>Matematica</td>
-                        </tr>
-                        <tr>
-                            <th>10:00-11:00</th>
-                            <td>Religione</td>
-                            <td>Sistemi e Reti</td>
-                            <td>Telecomunicazioni</td>
-                            <td>Inglese</td>
-                            <td>Informatica</td>
-                        </tr>
-                        <tr>
-                            <th>11:00-12:00</th>
-                            <td rowspan="2">Italiano e Storia</td>
-                            <td>Informatica</td>
-                            <td rowspan="2">Italiano e Storia</td>
-                            <td>Italiano e Storia</td>
-                            <td rowspan="2">Laboratorio Telecomunicazioni</td>
-                        </tr>
-                        <tr>
-                            <th>12:00-13:00</th>
-                            <td>Matematica</td>
-                            <td>Laboratorio Informatica</td>
-                        </tr>
-                        <tr>
-                            <th>13:00-14:00</th>
-                            <td>Inglese</td>
-                            <td>Laboratorio Informatica</td>
-                            <td>Laboratorio Sistemi</td>
-                            <td>Matematica</td>
-                            <td>Inglese</td>
-                        </tr>
-                    </tbody>
-                </table>
+        <main>
+            <div class="content">
+                <header>
+                    <h1>ORARIO</h1>
+                </header>
+                <div class="wrapper">
+                    <table>
+                        <thead>
+                            <th>ORARIO</th>
+                            <th>LUNEDÌ</th>
+                            <th>MARTEDÌ</th>
+                            <th>MERCOLEDÌ</th>
+                            <th>GIOVEDÌ</th>
+                            <th>VENERDÌ</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th>08:00-09:00</th>
+                                <td>Sistemi e Reti</td>
+                                <td rowspan="2">Scienze Motorie</td>
+                                <td>Informatica</td>
+                                <td rowspan="2">Laboratorio Teconologie e Progettazione</td>
+                                <td>Italiano e Storia</td>
+                            </tr>
+                            <tr>
+                                <th>09:00-10:00</th>
+                                <td>Matematica</td>
+                                <td>Teconologie e Progettazione</td>
+                                <td>Matematica</td>
+                            </tr>
+                            <tr>
+                                <th>10:00-11:00</th>
+                                <td>Religione</td>
+                                <td>Sistemi e Reti</td>
+                                <td>Telecomunicazioni</td>
+                                <td>Inglese</td>
+                                <td>Informatica</td>
+                            </tr>
+                            <tr>
+                                <th>11:00-12:00</th>
+                                <td rowspan="2">Italiano e Storia</td>
+                                <td>Informatica</td>
+                                <td rowspan="2">Italiano e Storia</td>
+                                <td>Italiano e Storia</td>
+                                <td rowspan="2">Laboratorio Telecomunicazioni</td>
+                            </tr>
+                            <tr>
+                                <th>12:00-13:00</th>
+                                <td>Matematica</td>
+                                <td>Laboratorio Informatica</td>
+                            </tr>
+                            <tr>
+                                <th>13:00-14:00</th>
+                                <td>Inglese</td>
+                                <td>Laboratorio Informatica</td>
+                                <td>Laboratorio Sistemi</td>
+                                <td>Matematica</td>
+                                <td>Inglese</td>
+                            </tr>
+                            <tr>
+                                <th>14:00-15:00</th>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
-        </div>
-    </main>
+        </main>
+    </div>
     <footer>
         <a href="https://www.instagram.com/isis.facchinetti/" target="_blank">
             <i class="fa-brands fa-instagram"></i>
