--- a/pages/professori.html
+++ b/pages/professori.html
@@ -10,104 +10,104 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/styleProfessori.css">
     <script src="https://kit.fontawesome.com/332c6e2590.js" crossorigin="anonymous"></script>
     <title>4GI - Professori</title>
 </head>
 
 <body>
-    <nav>
-        <a href="../index.html">
-            <li>HOME</li>
-        </a>
-        <a href="alunni.html">
-            <li>ALUNNI</li>
-        </a>
-        <a href="professori.html">
-            <li>PROFESSORI</li>
-        </a>
-        <a href="orario.html">
-            <li>ORARIO</li>
-        </a>
-        <a href="./pages/libri.html">
-            <li>LIBRI</li>
-        </a>
-        <a href=""></a>
-    </nav>
+    <div class="element">
+        <nav>
+            <a href="../index.html">
+                <li>HOME</li>
+            </a>
+            <a href="/pages/alunni.html">
+                <li>ALUNNI</li>
+            </a>
+            <a href="/pages/professori.html">
+                <li>PROFESSORI</li>
+            </a>
+            <a href="/pages/orario.html">
+                <li>ORARIO</li>
+            </a>
+            <a href="/pages/libri.html">
+                <li>LIBRI</li>
+            </a>
+        </nav>
 
-    <main>
-        <div class="content">
-            <header>
-                <h1>PROFESSORI</h1>
-            </header>
-            <div class="wrapper">
-                <table>
-                    <thead>
-                        <th>NOME</th>
-                        <th>COGNOME</th>
-                        <th>MATERIA</th>
-                        <th>ORE A SETTIMANA</th>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Luca</td>
-                            <td>Barracato</td>
-                            <td>Italiano<br>Storia</td>
-                            <td>6</td>
-                        </tr>
-                        <tr>
-                            <td>Claudia</td>
-                            <td>Ciarambino</td>
-                            <td>Informatica</td>
-                            <td>5</td>
-                        </tr>
-                        <tr>
-                            <td>Antonio</td>
-                            <td>Santoro</td>
-                            <td>Informatica Lab.</td>
-                            <td>2</td>
-                        </tr>
-                        <tr>
-                            <td>Giuseppe</td>
-                            <td>Trovato</td>
-                            <td>Sistemi e reti</td>
-                            <td>3</td>
-                        </tr>
-                        <tr>
-                            <td>Sara</td>
-                            <td>Colombo</td>
-                            <td>Inglese</td>
-                            <td>3</td>
-                        </tr>
-                        <tr>
-                            <td>Valentina</td>
-                            <td>Corà</td>
-                            <td>Religione</td>
-                            <td>1</td>
-                        </tr>
-                        <tr>
-                            <td>Giulio</td>
-                            <td>Scordo</td>
-                            <td>Telecomunicazioni Lab.</td>
-                            <td>2</td>
-                        </tr>
-                        <tr>
-                            <td>Sara</td>
-                            <td>Di Francesco</td>
-                            <td>Scienze motorie e sportive</td>
-                            <td>2</td>
-                        </tr>
-                        <tr>
-                            <td>Mario</td>
-                            <td>La Vecchia</td>
-                            <td>Telecomunicazioni</td>
-                            <td>3</td>
-                        </tr>
-                    </tbody>
-                </table>
+        <main>
+            <div class="content">
+                <header>
+                    <h1>PROFESSORI</h1>
+                </header>
+                <div class="wrapper">
+                    <table>
+                        <thead>
+                            <th>NOME</th>
+                            <th>COGNOME</th>
+                            <th>MATERIA</th>
+                            <th>ORE A SETTIMANA</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Luca</td>
+                                <td>Barracato</td>
+                                <td>Italiano<br>Storia</td>
+                                <td>6</td>
+                            </tr>
+                            <tr>
+                                <td>Claudia</td>
+                                <td>Ciarambino</td>
+                                <td>Informatica</td>
+                                <td>5</td>
+                            </tr>
+                            <tr>
+                                <td>Antonio</td>
+                                <td>Santoro</td>
+                                <td>Informatica Lab.</td>
+                                <td>2</td>
+                            </tr>
+                            <tr>
+                                <td>Giuseppe</td>
+                                <td>Trovato</td>
+                                <td>Sistemi e reti</td>
+                                <td>3</td>
+                            </tr>
+                            <tr>
+                                <td>Sara</td>
+                                <td>Colombo</td>
+                                <td>Inglese</td>
+                                <td>3</td>
+                            </tr>
+                            <tr>
+                                <td>Valentina</td>
+                                <td>Corà</td>
+                                <td>Religione</td>
+                                <td>1</td>
+                            </tr>
+                            <tr>
+                                <td>Giulio</td>
+                                <td>Scordo</td>
+                                <td>Telecomunicazioni Lab.</td>
+                                <td>2</td>
+                            </tr>
+                            <tr>
+                                <td>Sara</td>
+                                <td>Di Francesco</td>
+                                <td>Scienze motorie e sportive</td>
+                                <td>2</td>
+                            </tr>
+                            <tr>
+                                <td>Mario</td>
+                                <td>La Vecchia</td>
+                                <td>Telecomunicazioni</td>
+                                <td>3</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
-        </div>
-    </main>
+        </main>
+    </div>
     <footer>
         <a href="https://www.instagram.com/isis.facchinetti/" target="_blank">
             <i class="fa-brands fa-instagram"></i>
