--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h1>ISIS FACCHINETTI</h1>
           </header>
           <div id="imageContainer">
-            <img src="./img/scuola.jpg" alt="Istituto Facchinetti" width="100%" />
+            <!-- <img src="./img/scuola.jpg" alt="Istituto Facchinetti" width="100%" /> -->
           </div>
           <div class="text">
             <p>
