--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
           <li>LIBRI</li>
         </a>
       </nav>
-  
+
       <main>
         <div class="content">
           <header>
             <h1>ISIS FACCHINETTI</h1>
           </header>
           <div id="imageContainer">
-            <!-- <img src="./img/scuola.jpg" alt="Istituto Facchinetti" width="100%" /> -->
+            <img src="./img/scuola.jpg" alt="Istituto Facchinetti" width="100%" />
           </div>
           <div class="text">
             <p>
