--- a/pages/orario.html
+++ b/pages/orario.html
@@ -88,15 +88,13 @@
                             <tr>
                                 <th>13:00-14:00</th>
                                 <td>Inglese</td>
-                                <td>Laboratorio Informatica</td>
-                                <td>Laboratorio Sistemi</td>
+                                <td rowspan="2">Laboratorio Informatica</td>
+                                <td rowspan="2">Laboratorio Sistemi</td>
                                 <td>Matematica</td>
                                 <td>Inglese</td>
                             </tr>
                             <tr>
                                 <th>14:00-15:00</th>
-                                <td></td>
-                                <td></td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
