--- a/pages/libri.html
+++ b/pages/libri.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/332c6e2590.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>4GI - Libri</title>
 </head>
 
 <body>
