--- a/pages/orario.html
+++ b/pages/orario.html
@@ -52,15 +52,15 @@
                         <tbody>
                             <tr>
                                 <th>08:00-09:00</th>
-                                <td>Sistemi e Reti</td>
+                                <td>Matematica</td>
                                 <td rowspan="2">Scienze Motorie</td>
                                 <td>Informatica</td>
-                                <td rowspan="2">Laboratorio Teconologie e Progettazione</td>
+                                <td rowspan="2">Laboratorio Teconologie <br>e Progettazione</td>
                                 <td>Italiano e Storia</td>
                             </tr>
                             <tr>
                                 <th>09:00-10:00</th>
-                                <td>Matematica</td>
+                                <td>Italiano e Storia</td>
                                 <td>Teconologie e Progettazione</td>
                                 <td>Matematica</td>
                             </tr>
@@ -70,11 +70,11 @@
                                 <td>Sistemi e Reti</td>
                                 <td>Telecomunicazioni</td>
                                 <td>Inglese</td>
-                                <td>Informatica</td>
+                                <td>Sistemi e Reti</td>
                             </tr>
                             <tr>
                                 <th>11:00-12:00</th>
-                                <td rowspan="2">Italiano e Storia</td>
+                                <td>Informatica</td>
                                 <td>Informatica</td>
                                 <td rowspan="2">Italiano e Storia</td>
                                 <td>Italiano e Storia</td>
@@ -82,6 +82,7 @@
                             </tr>
                             <tr>
                                 <th>12:00-13:00</th>
+                                <td>Italiano e Storia</td>
                                 <td>Matematica</td>
                                 <td>Laboratorio Informatica</td>
                             </tr>
