--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 
 <body>
   <div class="element">
+    <div class="classe">
+      <h2>4GI</h2>
+      <h2>IT Cipriano Facchinetti</h2>
+      <img src="./img/logoisisfacchinetti.png" alt="Logo Isis Facchinetti" width="120px">
+    </div>
     <nav>
       <a href="index.html">
         <li>HOME</li>
@@ -36,9 +41,6 @@
 
     <main>
       <div class="content">
-        <header>
-          <h1>ISIS FACCHINETTI</h1>
-        </header>
         <div id="imageContainer">
           <img src="./img/scuola.jpg" alt="Istituto Facchinetti" width="100%" />
         </div>
