--- a/pages/professori.html
+++ b/pages/professori.html
@@ -16,6 +16,11 @@
 
 <body>
   <div class="element">
+    <div class="classe">
+      <h2>4GI</h2>
+      <h2>IT Cipriano Facchinetti</h2>
+      <img src="./img/logoisisfacchinetti.png" alt="Logo Isis Facchinetti" width="120px">
+    </div>
     <nav>
       <a href="../index.html">
         <li>HOME</li>
