--- a/pages/alunni.html
+++ b/pages/alunni.html
@@ -14,12 +14,13 @@
     <title>4GI - Alunni</title>
 </head>
 
+<script src="../js/sketch.js" type="text/javascript"></script>
 <body>
     <div class="element">
         <div class="classe">
             <h2>4GI</h2>
             <h2>IT Cipriano Facchinetti</h2>
-            <img src="./img/logoisisfacchinetti.png" alt="Logo Isis Facchinetti" width="120px">
+            <img src="../img/logoisisfacchinetti.png" alt="Logo Isis Facchinetti" width="120px">
         </div>
         <nav>
             <a href="../index.html">
@@ -37,6 +38,7 @@
             <a href="/pages/libri.html">
                 <li>LIBRI</li>
             </a>
+            
         </nav>
 
         <main>
@@ -181,6 +183,6 @@
             <li>YOUTUBE</li>
         </a>
     </footer>
+    <p id="pOrario"></p>
 </body>
-
 </html>
