--- a/pages/professori.html
+++ b/pages/professori.html
@@ -19,7 +19,7 @@
     <div class="classe">
       <h2>4GI</h2>
       <h2>IT Cipriano Facchinetti</h2>
-      <img src="./img/logoisisfacchinetti.png" alt="Logo Isis Facchinetti" width="120px">
+      <img src="../img/logoisisfacchinetti.png" alt="Logo Isis Facchinetti" width="120px">
     </div>
     <nav>
       <a href="../index.html">
