--- a/pages/professori.html
+++ b/pages/professori.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/style.css">
+  <script src="../js/sketch.js" type="text/javascript" defer></script>
   <script src="https://kit.fontawesome.com/332c6e2590.js" crossorigin="anonymous"></script>
   <title>4GI - Professori</title>
 </head>
@@ -118,6 +119,9 @@
         </div>
       </div>
     </main>
+  </div>
+  <div class="oraDiv">
+    <p id="pOrario"></p>
   </div>
   <footer>
     <a href="https://www.instagram.com/isis.facchinetti/" target="_blank">
