--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
+  <script src="../js/sketch.js" type="text/javascript" defer></script>
   <script src="https://kit.fontawesome.com/332c6e2590.js" crossorigin="anonymous"></script>
   <title>4GI</title>
 </head>
@@ -70,6 +71,9 @@
         </div>
       </div>
     </main>
+  </div>
+  <div class="oraDiv">
+    <p id="pOrario"></p>
   </div>
   <footer>
     <a href="https://www.instagram.com/isis.facchinetti/" target="_blank">
