--- a/pages/alunni.html
+++ b/pages/alunni.html
@@ -11,10 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/332c6e2590.js" crossorigin="anonymous"></script>
+    <script src="../js/sketch.js" type="text/javascript" defer></script>
     <title>4GI - Alunni</title>
 </head>
 
-<script src="../js/sketch.js" type="text/javascript"></script>
 <body>
     <div class="element">
         <div class="classe">
@@ -38,7 +38,7 @@
             <a href="/pages/libri.html">
                 <li>LIBRI</li>
             </a>
-            
+
         </nav>
 
         <main>
@@ -165,6 +165,9 @@
             </div>
         </main>
     </div>
+    <div class="oraDiv">
+        <p id="pOrario"></p>
+    </div>
     <footer>
         <a href="https://www.instagram.com/isis.facchinetti/" target="_blank">
             <i class="fa-brands fa-instagram"></i>
@@ -183,6 +186,6 @@
             <li>YOUTUBE</li>
         </a>
     </footer>
-    <p id="pOrario"></p>
 </body>
+
 </html>
