--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
         </div>
       </main>
       <aside>
-        <a href=""><li>dfwqfe</li></a>
+        <!-- <a href=""><li>dfwqfe</li></a>
         <a href=""><li>vewfvw</li></a>
         <a href=""><li>vwrv</li></a>
-        <a href=""><li></li></a>
+        <a href=""><li></li></a> -->
       </aside>
     </div>
   </div>
