--- a/pages/professori.html
+++ b/pages/professori.html
@@ -64,7 +64,7 @@
                 <td>Claudia</td>
                 <td>Ciarambino</td>
                 <td>Informatica</td>
-                <td>5</td>
+                <td>6</td>
               </tr>
               <tr>
                 <td>Alessandro</td>
@@ -81,7 +81,7 @@
               <tr>
                 <td>Giuseppe</td>
                 <td>Trovato</td>
-                <td>Sistemi e reti</td>
+                <td>Sistemi e Reti</td>
                 <td>3</td>
               </tr>
               <tr>
@@ -113,6 +113,18 @@
                 <td>La Vecchia</td>
                 <td>Telecomunicazioni</td>
                 <td>3</td>
+              </tr>
+              <tr>
+                <td>Mario</td>
+                <td>Gaglio</td>
+                <td>Teconologie e Progettazione</td>
+                <td>3</td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td>Teconologie e Progettazione Lab. <br>Sistemi e Reti Lab.</td>
+                <td>4</td>
               </tr>
             </tbody>
           </table>
