adding aside dat

--- a/pages/alunni.html
+++ b/pages/alunni.html
@@ -48,132 +48,135 @@
         </a>
       </nav>
 
-      <main>
-        <div class="content">
-          <header>
-            <h1>ALUNNI</h1>
-          </header>
-          <div class="wrapper">
-            <table>
-              <thead>
-                <th>NUMERO<br />ALFABETICO</th>
-                <th>NOME</th>
-                <th>COGNOME</th>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>1</td>
-                  <td>Daniele</td>
-                  <td>Battaglia</td>
-                </tr>
-                <tr>
-                  <td>2</td>
-                  <td>Tommaso</td>
-                  <td>Caccia</td>
-                </tr>
-                <tr>
-                  <td>3</td>
-                  <td>Van My</td>
-                  <td>Collini</td>
-                </tr>
-                <tr>
-                  <td>4</td>
-                  <td>Francesco</td>
-                  <td>Da Lisca</td>
-                </tr>
-                <tr>
-                  <td>5</td>
-                  <td>Mirko</td>
-                  <td>D'Avenia</td>
-                </tr>
-                <tr>
-                  <td>6</td>
-                  <td>Diego</td>
-                  <td>De Gaetano</td>
-                </tr>
-                <tr>
-                  <td>7</td>
-                  <td>Matteo</td>
-                  <td>Galli</td>
-                </tr>
-                <tr>
-                  <td>8</td>
-                  <td>Giuseppe</td>
-                  <td>Guzzi</td>
-                </tr>
-                <tr>
-                  <td>9</td>
-                  <td>Xherito</td>
-                  <td>Hasani</td>
-                </tr>
-                <tr>
-                  <td>10</td>
-                  <td>Stefano</td>
-                  <td>Hu</td>
-                </tr>
-                <tr>
-                  <td>11</td>
-                  <td>Dennis</td>
-                  <td>Ismajli</td>
-                </tr>
-                <tr>
-                  <td>12</td>
-                  <td>Luca</td>
-                  <td>Mainieri</td>
-                </tr>
-                <tr>
-                  <td>13</td>
-                  <td>Giovanni</td>
-                  <td>Moncada</td>
-                </tr>
-                <tr>
-                  <td>14</td>
-                  <td>Gabriele</td>
-                  <td>Moroni</td>
-                </tr>
-                <tr>
-                  <td>15</td>
-                  <td>Nicholas</td>
-                  <td>Parise</td>
-                </tr>
-                <tr>
-                  <td>16</td>
-                  <td>Davide</td>
-                  <td>Petrini</td>
-                </tr>
-                <tr>
-                  <td>17</td>
-                  <td>Edoardo</td>
-                  <td>Pomaro</td>
-                </tr>
-                <tr>
-                  <td>18</td>
-                  <td>Alessandro</td>
-                  <td>Racalbuto</td>
-                </tr>
-                <tr>
-                  <td>19</td>
-                  <td>Marco</td>
-                  <td>Sardina</td>
-                </tr>
-                <tr>
-                  <td>20</td>
-                  <td>Luca</td>
-                  <td>Scudeller</td>
-                </tr>
-                <tr>
-                  <td>21</td>
-                  <td>Ange</td>
-                  <td>Tano</td>
-                </tr>
-              </tbody>
-            </table>
+      <div class="wrapAside">
+        <main>
+          <div class="content">
+            <header>
+              <h1>ALUNNI</h1>
+            </header>
+            <div class="wrapper">
+              <table>
+                <thead>
+                  <th>NUMERO<br />ALFABETICO</th>
+                  <th>NOME</th>
+                  <th>COGNOME</th>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>1</td>
+                    <td>Daniele</td>
+                    <td>Battaglia</td>
+                  </tr>
+                  <tr>
+                    <td>2</td>
+                    <td>Tommaso</td>
+                    <td>Caccia</td>
+                  </tr>
+                  <tr>
+                    <td>3</td>
+                    <td>Van My</td>
+                    <td>Collini</td>
+                  </tr>
+                  <tr>
+                    <td>4</td>
+                    <td>Francesco</td>
+                    <td>Da Lisca</td>
+                  </tr>
+                  <tr>
+                    <td>5</td>
+                    <td>Mirko</td>
+                    <td>D'Avenia</td>
+                  </tr>
+                  <tr>
+                    <td>6</td>
+                    <td>Diego</td>
+                    <td>De Gaetano</td>
+                  </tr>
+                  <tr>
+                    <td>7</td>
+                    <td>Matteo</td>
+                    <td>Galli</td>
+                  </tr>
+                  <tr>
+                    <td>8</td>
+                    <td>Giuseppe</td>
+                    <td>Guzzi</td>
+                  </tr>
+                  <tr>
+                    <td>9</td>
+                    <td>Xherito</td>
+                    <td>Hasani</td>
+                  </tr>
+                  <tr>
+                    <td>10</td>
+                    <td>Stefano</td>
+                    <td>Hu</td>
+                  </tr>
+                  <tr>
+                    <td>11</td>
+                    <td>Dennis</td>
+                    <td>Ismajli</td>
+                  </tr>
+                  <tr>
+                    <td>12</td>
+                    <td>Luca</td>
+                    <td>Mainieri</td>
+                  </tr>
+                  <tr>
+                    <td>13</td>
+                    <td>Giovanni</td>
+                    <td>Moncada</td>
+                  </tr>
+                  <tr>
+                    <td>14</td>
+                    <td>Gabriele</td>
+                    <td>Moroni</td>
+                  </tr>
+                  <tr>
+                    <td>15</td>
+                    <td>Nicholas</td>
+                    <td>Parise</td>
+                  </tr>
+                  <tr>
+                    <td>16</td>
+                    <td>Davide</td>
+                    <td>Petrini</td>
+                  </tr>
+                  <tr>
+                    <td>17</td>
+                    <td>Edoardo</td>
+                    <td>Pomaro</td>
+                  </tr>
+                  <tr>
+                    <td>18</td>
+                    <td>Alessandro</td>
+                    <td>Racalbuto</td>
+                  </tr>
+                  <tr>
+                    <td>19</td>
+                    <td>Marco</td>
+                    <td>Sardina</td>
+                  </tr>
+                  <tr>
+                    <td>20</td>
+                    <td>Luca</td>
+                    <td>Scudeller</td>
+                  </tr>
+                  <tr>
+                    <td>21</td>
+                    <td>Ange</td>
+                    <td>Tano</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
-        </div>
-      </main>
-    </div>
-    <div class="oraDiv">
-      <p id="pOrario"></p>
+        </main>
+        <aside>
+          <div class="oraDiv">
+          <p id="pOrario"></p>
+        </aside>
+      </div>
     </div>
     <footer>
       <a href="https://www.instagram.com/isis.facchinetti/" target="_blank">
